--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,12 @@ upstream backend {
 
 server {
     listen 80;
+    server_name shotping.shop
+
+    location /.well-known/acme-challenge/ { 
+        allow all; 
+        root /var/www/certbot; 
+    }
 
     location / {
         root /var/www/shotping-frontend;
