--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -42,6 +42,8 @@ jobs:
             cd docker
             git pull
             echo "${{ secrets.ENV }}" > .env
+            mkdir -p monitoring/alertmanager
+            echo "${{ secrets.ALERTMANGER }}" > monitoring/alertmanager/alertmanager.yml
             docker-compose -f docker-compose.prod.yml down
             docker-compose -f docker-compose.prod.yml pull
             docker-compose -f docker-compose.prod.yml up -d
