fix: https 리다이렉트 형식 변환

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,20 +1,45 @@
-upstream backend {  
+upstream backend {
     server node-service:8080;
 }
 
 server {
     listen 80;
-    server_name shotping.shop
+    server_name shotping.shop;
 
-    location /.well-known/acme-challenge/ { 
-        allow all; 
-        root /var/www/certbot; 
+    location /.well-known/acme-challenge/ {
+        allow all;
+        root /var/www/certbot;
     }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server{
+    listen 443 ssl;
+    server_name shotping.shop;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/shotping.shop/fullchain.pem;  # ssl [>
+    ssl_certificate_key /etc/letsencrypt/live/shotping.shop/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
         root /var/www/shotping-frontend;
         try_files $uri $uri/ /index.html?q=$uri&$args;
     }
+
+    location /staticfiles {
+        alias /backend/staticfiles;
+    }
+    location ~* (service-worker\.js)$ {
+        add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+        expires off;
+        proxy_no_cache 1;
+    }
+
 
     location /api/ {
         proxy_pass http://backend;
