--- a/elk/logstash/pipeline/logstash.conf
+++ b/elk/logstash/pipeline/logstash.conf
@@ -3,18 +3,24 @@ input {
     port => 5044
   }
 }
-
 filter {
-  grok {
-    match => { "message" => "%{TIMESTAMP_ISO8601:timestamp} %{WORD:loglevel}: %{GREEDYDATA:api_status}: %{WORD:http_method} %{URIPATH:request} Status code: %{NUMBER:status_code:int}" }
+  if [fields][log_type] == "access_log" {
+    grok {
+      match => { "message" => "%{IP:client_ip} - - \[%{HTTPDATE:timestamp}\] \"%{WORD:http_method} %{DATA:request} HTTP/%{NUMBER:http_version}\" %{NUMBER:status} %{NUMBER:bytes_sent} \"%{DATA:referrer}\" \"%{GREEDYDATA:user_agent}\"" }
+    }
+    date {
+      match => [ "timestamp", "dd/MMM/YYYY:HH:mm:ss Z" ]
+      target => "@timestamp"
+      timezone => "Asia/Seoul"
+    }
+    mutate {
+      remove_field => [ "timestamp" ]
+    }
   }
-  date {
-    match => [ "timestamp", "ISO8601" ]
-    target => "@timestamp"
-    timezone => "Asia/Seoul"
-  }
-  mutate {
-    remove_field => [ "timestamp" ]
+  else if [fields][log_type] == "error_log" {
+    grok {
+      match => { "message" => "%{YEAR}/%{MONTHNUM}/%{MONTHDAY} %{TIME} \[%{LOGLEVEL:loglevel}\] %{GREEDYDATA:message}" }
+    }
   }
 }
 
