--- a/elk/filebeat/config/filebeat.yml
+++ b/elk/filebeat/config/filebeat.yml
@@ -2,10 +2,15 @@ filebeat.inputs:
   - type: log
     enabled: true
     paths:
-      - /usr/share/filebeat/logs/*.log
-      # - /usr/share/filebeat/shotping_node/logs/*.log  # here
-
-
+      - /usr/share/filebeat/logs/access.log
+    fields:
+      log_type: access_log
+  - type: log
+    enabled: true
+    paths:
+      - /usr/share/filebeat/logs/error.log
+    fields:
+      log_type: error_log
 output.logstash:
   enabled: true
   hosts: ["logstash:5044"]
@@ -14,3 +19,5 @@ setup.kibana:
   host: "http://kibana:5601"
   username: "elastic"
   password: "changeme"
+
+logging.level: warning
